// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskList With anchors renders correctly 1`] = `
<div>
  <div
    class="css-1mxr31d-boxStyles"
  >
    <div
      class="css-1lvzxao-boxStyles"
    >
      <h2
        class="css-s8h0nj-boxStyles"
      >
        Complete these tasks
      </h2>
      <span
        class="css-axuon-boxStyles"
      >
        2
         of 
        4
         tasks completed
      </span>
    </div>
    <ul
      class="css-1r8gefe-boxStyles-TaskListItemsContainer"
    >
      <li
        class="css-16jufl0-TaskListItem"
      >
        <a
          class="css-1htue7x-TextLink-boxStyles-TaskListItem"
          href="#"
        >
          <span
            class="css-dddyaj-boxStyles"
          >
            <span
              class="css-1hgwk69-boxStyles"
            >
              <svg
                aria-hidden="true"
                class="css-1wpwzfj-TaskListItem"
                clip-rule="evenodd"
                fill-rule="evenodd"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 23c6.075 0 11-4.925 11-11S18.075 1 12 1 1 5.925 1 12s4.925 11 11 11Zm5.707-13.293a1 1 0 0 0-1.414-1.414L10 14.586l-2.293-2.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
                  fill="currentColor"
                  stroke="none"
                />
              </svg>
            </span>
            <span
              class="css-1wcx0lf-boxStyles"
            >
              <span
                class="css-84frxs-boxStyles"
                data-agds-task-list-item-text=""
              >
                Check eligibility
                <span
                  class="css-avudkd-VisuallyHidden"
                >
                  .
                </span>
              </span>
              <span
                class="css-q6tqn6-boxStyles"
              >
                <svg
                  aria-hidden="true"
                  class="css-6t7fnj-TaskListItem"
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 23c6.075 0 11-4.925 11-11S18.075 1 12 1 1 5.925 1 12s4.925 11 11 11Zm5.707-13.293a1 1 0 0 0-1.414-1.414L10 14.586l-2.293-2.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
                    fill="currentColor"
                    stroke="none"
                  />
                </svg>
                <span
                  class="css-nqv792-boxStyles"
                >
                  Completed
                  <span
                    class="css-avudkd-VisuallyHidden"
                  >
                    .
                  </span>
                </span>
              </span>
              <span
                class="css-axuon-boxStyles"
              />
            </span>
          </span>
          <svg
            aria-hidden="true"
            class="css-1pw6exk-Icon"
            clip-rule="evenodd"
            fill-rule="evenodd"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 12h17M16 7l5 5-5 5"
            />
          </svg>
        </a>
      </li>
      <li
        class="css-16jufl0-TaskListItem"
      >
        <a
          class="css-1htue7x-TextLink-boxStyles-TaskListItem"
          href="#"
        >
          <span
            class="css-dddyaj-boxStyles"
          >
            <span
              class="css-1hgwk69-boxStyles"
            >
              <svg
                aria-hidden="true"
                class="css-1wpwzfj-TaskListItem"
                clip-rule="evenodd"
                fill-rule="evenodd"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 23c6.075 0 11-4.925 11-11S18.075 1 12 1 1 5.925 1 12s4.925 11 11 11Zm5.707-13.293a1 1 0 0 0-1.414-1.414L10 14.586l-2.293-2.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
                  fill="currentColor"
                  stroke="none"
                />
              </svg>
            </span>
            <span
              class="css-1wcx0lf-boxStyles"
            >
              <span
                class="css-84frxs-boxStyles"
                data-agds-task-list-item-text=""
              >
                Lorem ipsum dolor sit amet
                <span
                  class="css-avudkd-VisuallyHidden"
                >
                  .
                </span>
              </span>
              <span
                class="css-q6tqn6-boxStyles"
              >
                <svg
                  aria-hidden="true"
                  class="css-6t7fnj-TaskListItem"
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 23c6.075 0 11-4.925 11-11S18.075 1 12 1 1 5.925 1 12s4.925 11 11 11Zm5.707-13.293a1 1 0 0 0-1.414-1.414L10 14.586l-2.293-2.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
                    fill="currentColor"
                    stroke="none"
                  />
                </svg>
                <span
                  class="css-nqv792-boxStyles"
                >
                  Completed
                  <span
                    class="css-avudkd-VisuallyHidden"
                  >
                    .
                  </span>
                </span>
              </span>
              <span
                class="css-axuon-boxStyles"
              />
            </span>
          </span>
          <svg
            aria-hidden="true"
            class="css-1pw6exk-Icon"
            clip-rule="evenodd"
            fill-rule="evenodd"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 12h17M16 7l5 5-5 5"
            />
          </svg>
        </a>
      </li>
      <li
        class="css-16jufl0-TaskListItem"
      >
        <a
          class="css-1992mal-TextLink-boxStyles-TaskListItem"
          href="#"
        >
          <span
            class="css-dddyaj-boxStyles"
          >
            <span
              class="css-1hgwk69-boxStyles"
            >
              <svg
                aria-hidden="true"
                class="css-1d9b4dj-TaskListItem"
                clip-rule="evenodd"
                fill-rule="evenodd"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.5 13.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3ZM12 13.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3ZM17.5 13.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z"
                  fill="currentColor"
                  stroke="none"
                />
                <path
                  d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
                />
              </svg>
            </span>
            <span
              class="css-1wcx0lf-boxStyles"
            >
              <span
                class="css-84frxs-boxStyles"
                data-agds-task-list-item-text=""
              >
                Case Studies
                <span
                  class="css-avudkd-VisuallyHidden"
                >
                  .
                </span>
              </span>
              <span
                class="css-q6tqn6-boxStyles"
              >
                <svg
                  aria-hidden="true"
                  class="css-y64xti-TaskListItem"
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.5 13.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3ZM12 13.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3ZM17.5 13.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z"
                    fill="currentColor"
                    stroke="none"
                  />
                  <path
                    d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
                  />
                </svg>
                <span
                  class="css-nqv792-boxStyles"
                >
                  In progress
                  <span
                    class="css-avudkd-VisuallyHidden"
                  >
                    .
                  </span>
                </span>
              </span>
              <span
                class="css-axuon-boxStyles"
              />
            </span>
          </span>
          <svg
            aria-hidden="true"
            class="css-1pw6exk-Icon"
            clip-rule="evenodd"
            fill-rule="evenodd"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 12h17M16 7l5 5-5 5"
            />
          </svg>
        </a>
      </li>
      <li
        class="css-16jufl0-TaskListItem"
      >
        <a
          class="css-1htue7x-TextLink-boxStyles-TaskListItem"
          href="#"
        >
          <span
            class="css-dddyaj-boxStyles"
          >
            <span
              class="css-1hgwk69-boxStyles"
            >
              <svg
                aria-hidden="true"
                class="css-1d9b4dj-TaskListItem"
                clip-rule="evenodd"
                fill-rule="evenodd"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
                  stroke-dasharray="4 4"
                />
              </svg>
            </span>
            <span
              class="css-1wcx0lf-boxStyles"
            >
              <span
                class="css-84frxs-boxStyles"
                data-agds-task-list-item-text=""
              >
                Review and submit
                <span
                  class="css-avudkd-VisuallyHidden"
                >
                  .
                </span>
              </span>
              <span
                class="css-q6tqn6-boxStyles"
              >
                <svg
                  aria-hidden="true"
                  class="css-y64xti-TaskListItem"
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
                    stroke-dasharray="4 4"
                  />
                </svg>
                <span
                  class="css-nqv792-boxStyles"
                >
                  Not started
                  <span
                    class="css-avudkd-VisuallyHidden"
                  >
                    .
                  </span>
                </span>
              </span>
              <span
                class="css-axuon-boxStyles"
              >
                Not available until previous tasks are done
              </span>
            </span>
          </span>
          <svg
            aria-hidden="true"
            class="css-1pw6exk-Icon"
            clip-rule="evenodd"
            fill-rule="evenodd"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 12h17M16 7l5 5-5 5"
            />
          </svg>
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`TaskList With buttons renders correctly 1`] = `
<div>
  <div
    class="css-1mxr31d-boxStyles"
  >
    <div
      class="css-1lvzxao-boxStyles"
    >
      <h2
        class="css-s8h0nj-boxStyles"
      >
        Complete these tasks
      </h2>
      <span
        class="css-axuon-boxStyles"
      >
        2
         of 
        4
         tasks completed
      </span>
    </div>
    <ul
      class="css-1r8gefe-boxStyles-TaskListItemsContainer"
    >
      <li
        class="css-16jufl0-TaskListItem"
      >
        <button
          class="css-1vhalje-BaseButton-boxStyles-TaskListItem"
          type="button"
        >
          <span
            class="css-dddyaj-boxStyles"
          >
            <span
              class="css-1hgwk69-boxStyles"
            >
              <svg
                aria-hidden="true"
                class="css-1wpwzfj-TaskListItem"
                clip-rule="evenodd"
                fill-rule="evenodd"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 23c6.075 0 11-4.925 11-11S18.075 1 12 1 1 5.925 1 12s4.925 11 11 11Zm5.707-13.293a1 1 0 0 0-1.414-1.414L10 14.586l-2.293-2.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
                  fill="currentColor"
                  stroke="none"
                />
              </svg>
            </span>
            <span
              class="css-1wcx0lf-boxStyles"
            >
              <span
                class="css-84frxs-boxStyles"
                data-agds-task-list-item-text=""
              >
                Check eligibility
                <span
                  class="css-avudkd-VisuallyHidden"
                >
                  .
                </span>
              </span>
              <span
                class="css-q6tqn6-boxStyles"
              >
                <svg
                  aria-hidden="true"
                  class="css-6t7fnj-TaskListItem"
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 23c6.075 0 11-4.925 11-11S18.075 1 12 1 1 5.925 1 12s4.925 11 11 11Zm5.707-13.293a1 1 0 0 0-1.414-1.414L10 14.586l-2.293-2.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
                    fill="currentColor"
                    stroke="none"
                  />
                </svg>
                <span
                  class="css-nqv792-boxStyles"
                >
                  Completed
                  <span
                    class="css-avudkd-VisuallyHidden"
                  >
                    .
                  </span>
                </span>
              </span>
              <span
                class="css-axuon-boxStyles"
              />
            </span>
          </span>
          <svg
            aria-hidden="true"
            class="css-1pw6exk-Icon"
            clip-rule="evenodd"
            fill-rule="evenodd"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 12h17M16 7l5 5-5 5"
            />
          </svg>
        </button>
      </li>
      <li
        class="css-16jufl0-TaskListItem"
      >
        <button
          class="css-1vhalje-BaseButton-boxStyles-TaskListItem"
          type="button"
        >
          <span
            class="css-dddyaj-boxStyles"
          >
            <span
              class="css-1hgwk69-boxStyles"
            >
              <svg
                aria-hidden="true"
                class="css-1wpwzfj-TaskListItem"
                clip-rule="evenodd"
                fill-rule="evenodd"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 23c6.075 0 11-4.925 11-11S18.075 1 12 1 1 5.925 1 12s4.925 11 11 11Zm5.707-13.293a1 1 0 0 0-1.414-1.414L10 14.586l-2.293-2.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
                  fill="currentColor"
                  stroke="none"
                />
              </svg>
            </span>
            <span
              class="css-1wcx0lf-boxStyles"
            >
              <span
                class="css-84frxs-boxStyles"
                data-agds-task-list-item-text=""
              >
                Lorem ipsum dolor sit amet
                <span
                  class="css-avudkd-VisuallyHidden"
                >
                  .
                </span>
              </span>
              <span
                class="css-q6tqn6-boxStyles"
              >
                <svg
                  aria-hidden="true"
                  class="css-6t7fnj-TaskListItem"
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 23c6.075 0 11-4.925 11-11S18.075 1 12 1 1 5.925 1 12s4.925 11 11 11Zm5.707-13.293a1 1 0 0 0-1.414-1.414L10 14.586l-2.293-2.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
                    fill="currentColor"
                    stroke="none"
                  />
                </svg>
                <span
                  class="css-nqv792-boxStyles"
                >
                  Completed
                  <span
                    class="css-avudkd-VisuallyHidden"
                  >
                    .
                  </span>
                </span>
              </span>
              <span
                class="css-axuon-boxStyles"
              />
            </span>
          </span>
          <svg
            aria-hidden="true"
            class="css-1pw6exk-Icon"
            clip-rule="evenodd"
            fill-rule="evenodd"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 12h17M16 7l5 5-5 5"
            />
          </svg>
        </button>
      </li>
      <li
        class="css-16jufl0-TaskListItem"
      >
        <button
          class="css-uy7mdj-BaseButton-boxStyles-TaskListItem"
          type="button"
        >
          <span
            class="css-dddyaj-boxStyles"
          >
            <span
              class="css-1hgwk69-boxStyles"
            >
              <svg
                aria-hidden="true"
                class="css-1d9b4dj-TaskListItem"
                clip-rule="evenodd"
                fill-rule="evenodd"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.5 13.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3ZM12 13.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3ZM17.5 13.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z"
                  fill="currentColor"
                  stroke="none"
                />
                <path
                  d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
                />
              </svg>
            </span>
            <span
              class="css-1wcx0lf-boxStyles"
            >
              <span
                class="css-84frxs-boxStyles"
                data-agds-task-list-item-text=""
              >
                Case Studies
                <span
                  class="css-avudkd-VisuallyHidden"
                >
                  .
                </span>
              </span>
              <span
                class="css-q6tqn6-boxStyles"
              >
                <svg
                  aria-hidden="true"
                  class="css-y64xti-TaskListItem"
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.5 13.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3ZM12 13.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3ZM17.5 13.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z"
                    fill="currentColor"
                    stroke="none"
                  />
                  <path
                    d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
                  />
                </svg>
                <span
                  class="css-nqv792-boxStyles"
                >
                  In progress
                  <span
                    class="css-avudkd-VisuallyHidden"
                  >
                    .
                  </span>
                </span>
              </span>
              <span
                class="css-axuon-boxStyles"
              />
            </span>
          </span>
          <svg
            aria-hidden="true"
            class="css-1pw6exk-Icon"
            clip-rule="evenodd"
            fill-rule="evenodd"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 12h17M16 7l5 5-5 5"
            />
          </svg>
        </button>
      </li>
      <li
        class="css-16jufl0-TaskListItem"
      >
        <button
          class="css-1vhalje-BaseButton-boxStyles-TaskListItem"
          type="button"
        >
          <span
            class="css-dddyaj-boxStyles"
          >
            <span
              class="css-1hgwk69-boxStyles"
            >
              <svg
                aria-hidden="true"
                class="css-1d9b4dj-TaskListItem"
                clip-rule="evenodd"
                fill-rule="evenodd"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
                  stroke-dasharray="4 4"
                />
              </svg>
            </span>
            <span
              class="css-1wcx0lf-boxStyles"
            >
              <span
                class="css-84frxs-boxStyles"
                data-agds-task-list-item-text=""
              >
                Review and submit
                <span
                  class="css-avudkd-VisuallyHidden"
                >
                  .
                </span>
              </span>
              <span
                class="css-q6tqn6-boxStyles"
              >
                <svg
                  aria-hidden="true"
                  class="css-y64xti-TaskListItem"
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
                    stroke-dasharray="4 4"
                  />
                </svg>
                <span
                  class="css-nqv792-boxStyles"
                >
                  Not started
                  <span
                    class="css-avudkd-VisuallyHidden"
                  >
                    .
                  </span>
                </span>
              </span>
              <span
                class="css-axuon-boxStyles"
              >
                Not available until previous tasks are done
              </span>
            </span>
          </span>
          <svg
            aria-hidden="true"
            class="css-1pw6exk-Icon"
            clip-rule="evenodd"
            fill-rule="evenodd"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 12h17M16 7l5 5-5 5"
            />
          </svg>
        </button>
      </li>
    </ul>
  </div>
</div>
`;
